# file

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
.tipi/: deps  id  opts
cmake/modules/: Config.cmake.in
pre/file/: hash.hpp  home.hpp  string.hpp
tests/: CMakeLists.txt  hash.cpp  util.hpp
